<resources>
    <string name="app_name">RoomDatebasePOC</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="city">City 0r Village</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">Sign In</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>