<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ivLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp">

                    <ImageView
                        android:id="@+id/ivProfilePic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_profile_pic" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardUploadPic"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="12.5dp"
                    app:cardElevation="6dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_photo_24"
                        app:tint="@color/colorBlack" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textSize="@dimen/headingTextSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/headingTextSize" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/headingTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/headingTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                android:visibility="visible"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/headingTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/headingTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCityVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCityVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/headingTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilApplyingFor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/acApplyingFor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/gender"
                    android:imeOptions="actionNext"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/headingTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMatSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/headingTextSize"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llBtnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/custom_ripple"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_a_member"
                    android:textColor="#F3445566"
                    android:textSize="@dimen/regularTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/regularTextSize"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>